--- a/user/templates/receive.html
+++ b/user/templates/receive.html
@@ -1,9 +1,12 @@
 <hrml>
 	<head>
+		<meta charset="utf-8">
 	</head>
 	<body>
-		<p>첫번째 : {{first}} </p>
+		<p>
+			첫번째 : {{first}} 
 		<br>
-		<p>두번째 : {{second}} </p>
+			두번째 : {{second}} 
+		</p>
 	</body>
 </html>
